# Kinect-Object-Classification

./: .gitignore  README.md
Code/src/kinect/: kinect.launch
Code/src/kinect/src/: create_input_cloud.cpp  objects_trajectory.cpp  trajectory_header.h
Code/src/mitsubishi_melfa/: CMakeLists.txt
Code/src/mitsubishi_melfa/msg/: PositionCommand.msg
Code/src/mitsubishi_melfa/src/: mitsubishi_melfa_communication.cpp  mitsubishi_trajectory_generator.cpp
devel/: .catkin  .rosinstall  setup.sh
devel/include/kinect/: KinectCommand.h  SensorCommand.h
devel/include/mitsubishi_melfa/: MelfaCommand.h  PositionCommand.h
devel/share/assignment_2_1/cmake/: assignment_2_1Config.cmake
objects/: input.pcd  target.pcd
objects_examples/: calibration.pcd  cloud.pcd  command.txt  input.pcd  object_cloud_0.pcd  scene.pcd  trajectory_cloud_0.pcd
others/Melfa/: .checksum.md5
others/Melfa/melfa_robot/: #linuxSample.cpp#  Contents_Google Drive.txt  MXTSample.out  RV-2F_LinkParam.ods  howToUse.txt  linuxSample.cpp  memtest  memtest.cpp  strdef.h  structSizeCheck.ods  windowsSample.cpp
rosCode/src/kinect/: CMakeLists.txt
rosCode/src/kinect/msg/: KinectCommand.msg
rosCode/src/kinect/src/: detection_header.h  objects_detection.cpp
rosCode/src/mitsubishi_melfa/: package.xml
src/kinect/: CMakeLists.txt  package.xml
src/kinect/msg/: SensorCommand.msg
src/kinect/src/: calibration.cpp  create_input_cloud.cpp  objects_detection.cpp  objects_trajectory.cpp
src/mitsubishi_melfa/: mitsubishi_melfa.launch
src/mitsubishi_melfa/msg/: MelfaCommand.msg
src/mitsubishi_melfa/src/: mitsubishi_status_monitor.cpp  mitsubishi_target_generator.cpp
(+54 files in other folders)
